add css in index.html, portfolio.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
@@ -15,14 +15,16 @@
   </head>
   <body>
     <header class="header">
-      <a href="/" class="header-logo">WebStudio</a>
+      <a href="/" class="header-logo"
+        ><span class="header-logo-left">Web</span><span class="header-logo-right">Studio</span></a
+      >
       <nav class="header-navigation">
         <ul class="header-navigation-list">
           <li class="header-navigation-item">
             <a href="" class="header-navigation-link">Студия</a>
           </li>
           <li class="header-navigation-item">
-            <a href="" class="header-navigation-link">Портфолио</a>
+            <a href="./portfolio/portfolio.html" class="header-navigation-link">Портфолио</a>
           </li>
           <li class="header-navigation-item">
             <a href="" class="header-navigation-link">Контакты</a>
@@ -123,11 +125,13 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="/" class="fooetr-logo">WebStudio</a>
+      <a href="/" class="footer-logo"
+        ><span class="footer-logo-left">Web</span><span class="footer-logo-right">Studio</span></a
+      >
       <address class="footer-address">
         <ul class="footer-list">
           <li class="footer-item">
-            <a class="footer-link" href="https://goo.gl/maps/qoJzxrVLCb3UoENp8"
+            <a class="footer-link footer-link-address" href="https://goo.gl/maps/qoJzxrVLCb3UoENp8"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
