--- a/studio.html
+++ b/studio.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>WebStudio</title>
+    <title>Студия</title>
   </head>
   <body>
     <header class="header">
@@ -19,24 +19,24 @@
         ><span class="header-logo-left">Web</span><span class="header-logo-right">Studio</span></a
       >
       <nav class="header-navigation">
-        <ul class="header-navigation-list">
+        <ul class="header-navigation-list list">
           <li class="header-navigation-item">
-            <a href="" class="header-navigation-link">Студия</a>
+            <a href="" class="header-navigation-link link current">Студия</a>
           </li>
           <li class="header-navigation-item">
-            <a href="./portfolio/portfolio.html" class="header-navigation-link">Портфолио</a>
+            <a href="./portfolio.html" class="header-navigation-link link">Портфолио</a>
           </li>
           <li class="header-navigation-item">
-            <a href="" class="header-navigation-link">Контакты</a>
+            <a href="" class="header-navigation-link link">Контакты</a>
           </li>
         </ul>
       </nav>
-      <ul class="header-list">
+      <ul class="header-list list">
         <li class="header-item">
-          <a href="mailto:info@devstudio.com" class="header-link">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="header-link link">info@devstudio.com</a>
         </li>
         <li class="header-item">
-          <a href="tel:+380961111111" class="header-link">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="header-link link">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
@@ -47,7 +47,7 @@
       </section>
       <section class="benefits">
         <h2 class="visually-hidden">Наши преимущества</h2>
-        <ul class="benefits-list">
+        <ul class="benefits-list list">
           <li class="benefits-item">
             <h3 class="benefits-title">Внимание к деталям</h3>
             <p class="benefits-text">
@@ -76,7 +76,7 @@
       </section>
       <section class="about">
         <h2 class="about-title">Чем мы занимаемся</h2>
-        <ul class="about-list">
+        <ul class="about-list list">
           <li class="about-item">
             <img
               src="./img/box_1.jpg"
@@ -100,7 +100,7 @@
       </section>
       <section class="team">
         <h2 class="team-title">Наша команда</h2>
-        <ul class="team-list">
+        <ul class="team-list list">
           <li class="team-item">
             <img src="./img/img_team_1.jpg" alt="Product Designer" width="270" height="260" />
             <h3 class="team-item-title">Игорь Демьяненко</h3>
@@ -129,17 +129,19 @@
         ><span class="footer-logo-left">Web</span><span class="footer-logo-right">Studio</span></a
       >
       <address class="footer-address">
-        <ul class="footer-list">
+        <ul class="footer-list list">
           <li class="footer-item">
-            <a class="footer-link footer-link-address" href="https://goo.gl/maps/qoJzxrVLCb3UoENp8"
+            <a
+              class="footer-link footer-link-address link"
+              href="https://goo.gl/maps/qoJzxrVLCb3UoENp8"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
           <li class="footer-item">
-            <a class="footer-link" href="mailto:info@example.com">info@example.com</a>
+            <a class="footer-link link" href="mailto:info@example.com">info@example.com</a>
           </li>
           <li class="footer-item">
-            <a class="footer-link" href="tel:+380991111111">+38 099 111 11 11</a>
+            <a class="footer-link link" href="tel:+380991111111">+38 099 111 11 11</a>
           </li>
         </ul>
       </address>
