--- a/portfolio.html
+++ b/portfolio.html
@@ -40,117 +40,116 @@
         </li>
       </ul>
     </header>
-    <main>
-      <section>
-        <ul class="filters-list list">
-          <li><button type="button" class="filters-btn">Все</button></li>
-          <li><button type="button" class="filters-btn">Веб-сайты</button></li>
-          <li><button type="button" class="filters-btn">Приложения</button></li>
-          <li><button type="button" class="filters-btn">Дизайн</button></li>
-          <li><button type="button" class="filters-btn">Маркетинг</button></li>
-        </ul>
-        <ul class="projects-list list">
-          <li class="projects-item">
-            <img
-              class="projects-link"
-              src="./img/imj_project_1.jpg"
-              alt="Технокряк"
-              width="370"
-              height="294"
-            />
-            <h3 class="projects-title">Технокряк</h3>
-            <p class="projects-text">Веб-сайт</p>
-          </li>
-          <li class="projects-item">
-            <img
-              class="projects-link"
-              src="./img/imj_project_2.jpg"
-              alt="Постер New Orlean vs Golden Star"
-              width="370"
-              height="294"
-            />
-            <h3 class="projects-title">Постер New Orlean vs Golden Star</h3>
-            <p class="projects-text">Дизайн</p>
-          </li>
-          <li class="projects-item">
-            <img
-              class="projects-link"
-              src="./img/imj_project_3.jpg"
-              alt="Ресторан Seafood"
-              width="370"
-              height="294"
-            />
-            <h3 class="projects-title">Ресторан Seafood</h3>
-            <p class="projects-text">Приложение</p>
-          </li>
-          <li class="projects-item">
-            <img
-              class="projects-link"
-              src="./img/imj_project_4.jpg"
-              alt="Проект Prime"
-              width="370"
-              height="294"
-            />
-            <h3 class="projects-title">Проект Prime</h3>
-            <p class="projects-text">Маркетинг</p>
-          </li>
-          <li class="projects-item">
-            <img
-              class="projects-link"
-              src="./img/imj_project_5.jpg"
-              alt="Проект Boxes"
-              width="370"
-              height="294"
-            />
-            <h3 class="projects-title">Проект Boxes</h3>
-            <p class="projects-text">Приложение</p>
-          </li>
-          <li class="projects-item">
-            <img
-              class="projects-link"
-              src="./img/imj_project_6.jpg"
-              alt="Inspiration has no Borders"
-              width="370"
-              height="294"
-            />
-            <h3 class="projects-title">Inspiration has no Borders</h3>
-            <p class="projects-text">Веб-сайт</p>
-          </li>
-          <li class="projects-item">
-            <img
-              class="projects-link"
-              src="./img/imj_project_7.jpg"
-              alt="Издание Limited Edition"
-              width="370"
-              height="294"
-            />
-            <h3 class="projects-title">Издание Limited Edition</h3>
-            <p class="projects-text">Дизайн</p>
-          </li>
-          <li class="projects-item">
-            <img
-              class="projects-link"
-              src="./img/imj_project_8.jpg"
-              alt="Проект LAB"
-              width="370"
-              height="294"
-            />
-            <h3 class="projects-title">Проект LAB</h3>
-            <p class="projects-text">Маркетинг</p>
-          </li>
-          <li class="projects-item">
-            <img
-              class="projects-link"
-              src="./img/imj_project_9.jpg"
-              alt="Growing Business"
-              width="370"
-              height="294"
-            />
-            <h3 class="projects-title">Growing Business</h3>
-            <p class="projects-text">Приложение</p>
-          </li>
-        </ul>
-      </section>
+    <main class="main-portfolio">
+      <h1 class="visually-hidden">Наше портфолио</h1>
+      <ul class="filters-list list">
+        <li><button type="button" class="filters-btn">Все</button></li>
+        <li><button type="button" class="filters-btn">Веб-сайты</button></li>
+        <li><button type="button" class="filters-btn">Приложения</button></li>
+        <li><button type="button" class="filters-btn">Дизайн</button></li>
+        <li><button type="button" class="filters-btn">Маркетинг</button></li>
+      </ul>
+      <ul class="projects-list list">
+        <li class="projects-item">
+          <img
+            class="projects-link"
+            src="./img/imj_project_1.jpg"
+            alt="Технокряк"
+            width="370"
+            height="294"
+          />
+          <h2 class="projects-title">Технокряк</h2>
+          <p class="projects-text">Веб-сайт</p>
+        </li>
+        <li class="projects-item">
+          <img
+            class="projects-link"
+            src="./img/imj_project_2.jpg"
+            alt="Постер New Orlean vs Golden Star"
+            width="370"
+            height="294"
+          />
+          <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
+          <p class="projects-text">Дизайн</p>
+        </li>
+        <li class="projects-item">
+          <img
+            class="projects-link"
+            src="./img/imj_project_3.jpg"
+            alt="Ресторан Seafood"
+            width="370"
+            height="294"
+          />
+          <h2 class="projects-title">Ресторан Seafood</h2>
+          <p class="projects-text">Приложение</p>
+        </li>
+        <li class="projects-item">
+          <img
+            class="projects-link"
+            src="./img/imj_project_4.jpg"
+            alt="Проект Prime"
+            width="370"
+            height="294"
+          />
+          <h2 class="projects-title">Проект Prime</h2>
+          <p class="projects-text">Маркетинг</p>
+        </li>
+        <li class="projects-item">
+          <img
+            class="projects-link"
+            src="./img/imj_project_5.jpg"
+            alt="Проект Boxes"
+            width="370"
+            height="294"
+          />
+          <h2 class="projects-title">Проект Boxes</h2>
+          <p class="projects-text">Приложение</p>
+        </li>
+        <li class="projects-item">
+          <img
+            class="projects-link"
+            src="./img/imj_project_6.jpg"
+            alt="Inspiration has no Borders"
+            width="370"
+            height="294"
+          />
+          <h2 class="projects-title">Inspiration has no Borders</h2>
+          <p class="projects-text">Веб-сайт</p>
+        </li>
+        <li class="projects-item">
+          <img
+            class="projects-link"
+            src="./img/imj_project_7.jpg"
+            alt="Издание Limited Edition"
+            width="370"
+            height="294"
+          />
+          <h2 class="projects-title">Издание Limited Edition</h2>
+          <p class="projects-text">Дизайн</p>
+        </li>
+        <li class="projects-item">
+          <img
+            class="projects-link"
+            src="./img/imj_project_8.jpg"
+            alt="Проект LAB"
+            width="370"
+            height="294"
+          />
+          <h2 class="projects-title">Проект LAB</h2>
+          <p class="projects-text">Маркетинг</p>
+        </li>
+        <li class="projects-item">
+          <img
+            class="projects-link"
+            src="./img/imj_project_9.jpg"
+            alt="Growing Business"
+            width="370"
+            height="294"
+          />
+          <h2 class="projects-title">Growing Business</h2>
+          <p class="projects-text">Приложение</p>
+        </li>
+      </ul>
     </main>
     <footer class="footer">
       <a href="/" class="footer-logo"
