--- a/studio.html
+++ b/studio.html
@@ -40,7 +40,7 @@
         </li>
       </ul>
     </header>
-    <main>
+    <main class="main-studio">
       <section class="hero">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
         <button type="button" class="hero-btn">Заказать услугу</button>
