--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
       <nav class="header-navigation">
         <ul class="header-navigation-list list">
           <li class="header-navigation-item">
-            <a href="./studio.html" class="header-navigation-link link">Студия</a>
+            <a href="./index.html" class="header-navigation-link link">Студия</a>
           </li>
           <li class="header-navigation-item">
             <a href="" class="header-navigation-link current link">Портфолио</a>
