making changes to HW

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   </head>
   <body>
     <header class="header">
-      <a href="/" class="header-logo"
-        ><span class="header-logo-left">Web</span><span class="header-logo-right">Studio</span></a
+      <a href="/" class="header-logo" lang="en"
+        >Web<span class="header-logo-studio" lang="en">Studio</span></a
       >
       <nav class="header-navigation">
         <ul class="header-navigation-list list">
@@ -125,8 +125,8 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="/" class="footer-logo"
-        ><span class="footer-logo-left">Web</span><span class="footer-logo-right">Studio</span></a
+      <a href="/" class="footer-logo" lang="en"
+        >Web<span class="footer-logo-studio" lang="en">Studio</span></a
       >
       <address class="footer-address">
         <ul class="footer-list list">
