--- a/portfolio.html
+++ b/portfolio.html
@@ -15,8 +15,8 @@
   </head>
   <body>
     <header class="header">
-      <a href="/" class="header-logo"
-        ><span class="header-logo-left">Web</span><span class="header-logo-right">Studio</span></a
+      <a href="/" class="header-logo" lang="en"
+        >Web<span class="header-logo-studio" lang="en">Studio</span></a
       >
       <nav class="header-navigation">
         <ul class="header-navigation-list list">
@@ -41,119 +41,121 @@
       </ul>
     </header>
     <main class="main-portfolio">
-      <h1 class="visually-hidden">Наше портфолио</h1>
-      <ul class="filters-list list">
-        <li><button type="button" class="filters-btn">Все</button></li>
-        <li><button type="button" class="filters-btn">Веб-сайты</button></li>
-        <li><button type="button" class="filters-btn">Приложения</button></li>
-        <li><button type="button" class="filters-btn">Дизайн</button></li>
-        <li><button type="button" class="filters-btn">Маркетинг</button></li>
-      </ul>
-      <ul class="projects-list list">
-        <li class="projects-item">
-          <img
-            class="projects-link"
-            src="./img/imj_project_1.jpg"
-            alt="Технокряк"
-            width="370"
-            height="294"
-          />
-          <h2 class="projects-title">Технокряк</h2>
-          <p class="projects-text">Веб-сайт</p>
-        </li>
-        <li class="projects-item">
-          <img
-            class="projects-link"
-            src="./img/imj_project_2.jpg"
-            alt="Постер New Orlean vs Golden Star"
-            width="370"
-            height="294"
-          />
-          <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
-          <p class="projects-text">Дизайн</p>
-        </li>
-        <li class="projects-item">
-          <img
-            class="projects-link"
-            src="./img/imj_project_3.jpg"
-            alt="Ресторан Seafood"
-            width="370"
-            height="294"
-          />
-          <h2 class="projects-title">Ресторан Seafood</h2>
-          <p class="projects-text">Приложение</p>
-        </li>
-        <li class="projects-item">
-          <img
-            class="projects-link"
-            src="./img/imj_project_4.jpg"
-            alt="Проект Prime"
-            width="370"
-            height="294"
-          />
-          <h2 class="projects-title">Проект Prime</h2>
-          <p class="projects-text">Маркетинг</p>
-        </li>
-        <li class="projects-item">
-          <img
-            class="projects-link"
-            src="./img/imj_project_5.jpg"
-            alt="Проект Boxes"
-            width="370"
-            height="294"
-          />
-          <h2 class="projects-title">Проект Boxes</h2>
-          <p class="projects-text">Приложение</p>
-        </li>
-        <li class="projects-item">
-          <img
-            class="projects-link"
-            src="./img/imj_project_6.jpg"
-            alt="Inspiration has no Borders"
-            width="370"
-            height="294"
-          />
-          <h2 class="projects-title">Inspiration has no Borders</h2>
-          <p class="projects-text">Веб-сайт</p>
-        </li>
-        <li class="projects-item">
-          <img
-            class="projects-link"
-            src="./img/imj_project_7.jpg"
-            alt="Издание Limited Edition"
-            width="370"
-            height="294"
-          />
-          <h2 class="projects-title">Издание Limited Edition</h2>
-          <p class="projects-text">Дизайн</p>
-        </li>
-        <li class="projects-item">
-          <img
-            class="projects-link"
-            src="./img/imj_project_8.jpg"
-            alt="Проект LAB"
-            width="370"
-            height="294"
-          />
-          <h2 class="projects-title">Проект LAB</h2>
-          <p class="projects-text">Маркетинг</p>
-        </li>
-        <li class="projects-item">
-          <img
-            class="projects-link"
-            src="./img/imj_project_9.jpg"
-            alt="Growing Business"
-            width="370"
-            height="294"
-          />
-          <h2 class="projects-title">Growing Business</h2>
-          <p class="projects-text">Приложение</p>
-        </li>
-      </ul>
+      <section class="portfolio">
+        <h1 class="visually-hidden">Наше портфолио</h1>
+        <ul class="filters-list list">
+          <li><button type="button" class="filters-btn">Все</button></li>
+          <li><button type="button" class="filters-btn">Веб-сайты</button></li>
+          <li><button type="button" class="filters-btn">Приложения</button></li>
+          <li><button type="button" class="filters-btn">Дизайн</button></li>
+          <li><button type="button" class="filters-btn">Маркетинг</button></li>
+        </ul>
+        <ul class="projects-list list">
+          <li class="projects-item">
+            <img
+              class="projects-link"
+              src="./img/imj_project_1.jpg"
+              alt="Технокряк"
+              width="370"
+              height="294"
+            />
+            <h2 class="projects-title">Технокряк</h2>
+            <p class="projects-text">Веб-сайт</p>
+          </li>
+          <li class="projects-item">
+            <img
+              class="projects-link"
+              src="./img/imj_project_2.jpg"
+              alt="Постер New Orlean vs Golden Star"
+              width="370"
+              height="294"
+            />
+            <h2 class="projects-title">Постер<span lang="en">New Orlean vs Golden Star</span></h2>
+            <p class="projects-text">Дизайн</p>
+          </li>
+          <li class="projects-item">
+            <img
+              class="projects-link"
+              src="./img/imj_project_3.jpg"
+              alt="Ресторан Seafood"
+              width="370"
+              height="294"
+            />
+            <h2 class="projects-title">Ресторан<span lang="en">Seafood</span></h2>
+            <p class="projects-text">Приложение</p>
+          </li>
+          <li class="projects-item">
+            <img
+              class="projects-link"
+              src="./img/imj_project_4.jpg"
+              alt="Проект Prime"
+              width="370"
+              height="294"
+            />
+            <h2 class="projects-title">Проект <span lang="en">Prime</span></h2>
+            <p class="projects-text">Маркетинг</p>
+          </li>
+          <li class="projects-item">
+            <img
+              class="projects-link"
+              src="./img/imj_project_5.jpg"
+              alt="Проект Boxes"
+              width="370"
+              height="294"
+            />
+            <h2 class="projects-title">Проект <span lang="en">Boxes</span></h2>
+            <p class="projects-text">Приложение</p>
+          </li>
+          <li class="projects-item">
+            <img
+              class="projects-link"
+              src="./img/imj_project_6.jpg"
+              alt="Inspiration has no Borders"
+              width="370"
+              height="294"
+            />
+            <h2 class="projects-title" lang="en">Inspiration has no Borders</h2>
+            <p class="projects-text">Веб-сайт</p>
+          </li>
+          <li class="projects-item">
+            <img
+              class="projects-link"
+              src="./img/imj_project_7.jpg"
+              alt="Издание Limited Edition"
+              width="370"
+              height="294"
+            />
+            <h2 class="projects-title">Издание <span lang="en">Limited Edition</span></h2>
+            <p class="projects-text">Дизайн</p>
+          </li>
+          <li class="projects-item">
+            <img
+              class="projects-link"
+              src="./img/imj_project_8.jpg"
+              alt="Проект LAB"
+              width="370"
+              height="294"
+            />
+            <h2 class="projects-title">Проект <span lang="en">LAB</span></h2>
+            <p class="projects-text">Маркетинг</p>
+          </li>
+          <li class="projects-item">
+            <img
+              class="projects-link"
+              src="./img/imj_project_9.jpg"
+              alt="Growing Business"
+              width="370"
+              height="294"
+            />
+            <h2 class="projects-title" lang="en">Growing Business</h2>
+            <p class="projects-text">Приложение</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer class="footer">
-      <a href="/" class="footer-logo"
-        ><span class="footer-logo-left">Web</span><span class="footer-logo-right">Studio</span></a
+      <a href="/" class="footer-logo" lang="en"
+        >Web<span class="footer-logo-studio" lang="en">Studio</span></a
       >
       <address class="footer-address">
         <ul class="footer-list list">
