--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
       <section class="portfolio">
         <h1 class="visually-hidden">Наше портфолио</h1>
         <ul class="filters-list list">
-          <li><button type="button" class="filters-btn">Все</button></li>
+          <li><button type="button" class="filters-btn filters-first-btn">Все</button></li>
           <li><button type="button" class="filters-btn">Веб-сайты</button></li>
           <li><button type="button" class="filters-btn">Приложения</button></li>
           <li><button type="button" class="filters-btn">Дизайн</button></li>
